# media-metadata-backup-machine

./: .gitignore  README.md  config.example.yaml  pyproject.toml  update-and-commit.sh  update_movies_index.py
